--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "@emotion/styled": "^11.11.0",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.3.1",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "i18next": "^23.6.0",
+    "react-i18next": "^13.3.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
