--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "z1-bingo",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.1.1",
   "type": "module",
   "packageManager": "yarn@4.0.0",
   "scripts": {
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.3.1",
+    "@types/node": "^20.8.9",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
