--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vitejs/plugin-react": "^4.0.3",
     "i18next": "^23.6.0",
     "react-i18next": "^13.3.1",
+    "react-icons": "^4.11.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
