--- a/.github/workflows/biome.yml
+++ b/.github/workflows/biome.yml
@@ -10,12 +10,15 @@ jobs:
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - name: setup nodejs
         uses: actions/setup-node@v4
         with:
-          cache: "yarn"
+          cache: "pnpm"
           node-version: 20
       - name: Install dependencies
-        run: yarn install
+        run: pnpm install
       - name: run biome format check
-        run: yarn lint
+        run: pnpm lint
