--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "biome lint ./src",
-    "format": "biome format --write ./src"
+    "lint": "biome check ./src && biome lint ./src",
+    "format": "biome check --apply-unsafe ./src && biome format --write ./src"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
