--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "@chakra-ui/theme-tools": "^2.1.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@remix-run/node": "^2.2.0",
+    "@remix-run/react": "^2.2.0",
+    "@remix-run/serve": "^2.2.0",
     "framer-motion": "^10.16.4",
+    "isbot": "^3.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
@@ -27,14 +31,15 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.3.3",
+    "@remix-run/dev": "^2.2.0",
     "@types/node": "^20.8.10",
     "@types/react": "^18.2.36",
     "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.1.1",
     "i18next": "^23.6.0",
     "react-i18next": "^13.3.1",
     "react-icons": "^4.11.0",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-tsconfig-paths": "^4.2.1"
   }
 }
