--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@chakra-ui/styled-system": "^2.9.1",
     "@chakra-ui/system": "^2.6.1",
     "@chakra-ui/theme-tools": "^2.1.1",
+    "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@remix-run/node": "^2.2.0",
