--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@chakra-ui/theme-tools": "^2.1.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource-variable/noto-sans-jp": "^5.0.16",
     "@vercel/analytics": "^1.1.1",
     "framer-motion": "^10.16.5",
     "react": "^18.2.0",
