--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "biome check ./src && biome lint ./src",
-    "format": "biome check --apply-unsafe ./src && biome format --write ./src"
+    "format": "biome check --apply-unsafe ./src && biome format --write ./src",
+    "test": "vitest"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
@@ -28,14 +29,17 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.4.1",
+    "@testing-library/react": "^14.1.2",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
     "i18next": "^23.7.8",
+    "jsdom": "^23.0.1",
     "react-i18next": "^13.5.0",
     "react-icons": "^4.12.0",
     "typescript": "^5.3.3",
-    "vite": "^5.0.10"
+    "vite": "^5.0.10",
+    "vitest": "^1.1.0"
   }
 }
