--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@types/node": "^20.10.8",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "i18next": "^23.7.16",
     "jsdom": "^23.0.1",
     "react-i18next": "^14.0.0",
