--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,7 +15,10 @@ jobs:
           version: 8
       - uses: actions/setup-node@v4
         with:
+          cache: "pnpm"
           node-version: 20
+      - name: Install dependencies
+        run: pnpm install
       - name: Install Playwright Browsers
         run: pnpm exec playwright install --with-deps
       - name: Run Playwright tests
