--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "z1-bingo",
+  "name": "zelda1-bingo",
   "private": true,
-  "version": "3.0.0",
+  "version": "3.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
