--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -9,10 +9,11 @@ jobs:
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v2
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
         with:
           version: 8
-      - name: setup nodejs
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           cache: "pnpm"
