--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.3.1/schema.json",
+  "$schema": "https://biomejs.dev/schemas/1.7.0/schema.json",
   "organizeImports": {
     "enabled": true
   },
@@ -16,6 +16,9 @@
       },
       "suspicious": {
         "noArrayIndexKey": "off"
+      },
+      "correctness": {
+        "noChildrenProp": "off"
       }
     }
   }
