--- a/.github/workflows/biome.yml
+++ b/.github/workflows/biome.yml
@@ -10,15 +10,13 @@ jobs:
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v4
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 8
+      - name: use corepack
+        run: corepack enable
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           cache: "pnpm"
-          node-version: 20
+          node-version: 22
       - name: Install dependencies
         run: pnpm install
       - name: run biome format check
