--- a/.github/workflows/biome.yml
+++ b/.github/workflows/biome.yml
@@ -1,13 +1,19 @@
 name: biome lint
 
 on:
-  - push
+  pull_request:
+    branches:
+      - main
+  push:
+    branches:
+      - main
 
 jobs:
   lint:
     name: Lint check
     runs-on: ubuntu-latest
     steps:
+      - uses: Kesin11/actions-timeline@v2
       - name: Checkout your repository using git
         uses: actions/checkout@v4
       - name: use corepack
