--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,14 +1,19 @@
 name: Playwright Tests
+
 on:
-  push:
-    branches: [main]
   pull_request:
-    branches: [main]
+    branches:
+      - main
+  push:
+    branches:
+      - main
+
 jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
+      - uses: Kesin11/actions-timeline@v2
       - name: Checkout your repository using git
         uses: actions/checkout@v4
       - name: use corepack
