--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -1,12 +1,18 @@
 name: vitest
 
 on:
-  - push
+  pull_request:
+    branches:
+      - main
+  push:
+    branches:
+      - main
 
 jobs:
   vitest:
     runs-on: ubuntu-latest
     steps:
+      - uses: Kesin11/actions-timeline@v2
       - name: Checkout your repository using git
         uses: actions/checkout@v4
       - name: use corepack
