--- a/package.json
+++ b/package.json
@@ -16,18 +16,16 @@
     "test:e2e:ci": "playwright test"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.2.4",
-    "@chakra-ui/react": "^2.10.2",
+    "@chakra-ui/react": "^3.0.2",
     "@chakra-ui/styled-system": "^2.12.0",
     "@chakra-ui/system": "^2.6.2",
     "@chakra-ui/theme-tools": "^2.2.6",
     "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
     "@fontsource-variable/noto-sans-jp": "^5.1.0",
     "@tanstack/react-form": "^0.34.1",
     "@tanstack/zod-form-adapter": "^0.33.0",
     "@vercel/analytics": "^1.3.2",
-    "framer-motion": "^11.11.10",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
