--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -15,8 +15,9 @@ jobs:
       - uses: Kesin11/actions-timeline@v2
       - name: Checkout your repository using git
         uses: actions/checkout@v4
-      - name: use corepack
-        run: corepack enable
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
